2011-01-03  Brady Eidson  <beidson@apple.com>

        Reviewed by Darin Adler.

        Add Encode/Decode machinery Darin and I plan to work with for back/forward stuff in WebKit2.

        Starting out with a pure virtual interface to be implemented in WK2, but we might change that later.

        * GNUmakefile.am:
        * JavaScriptCore.vcproj/WTF/WTF.vcproj:
        * JavaScriptCore.xcodeproj/project.pbxproj:
        * wtf/CMakeLists.txt:

        * wtf/Decoder.h: Added.
        * wtf/Encoder.h: Added.

2011-01-03  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Unreviewed build fix.

        [Qt] Add NullPtr.cpp introduced in r71155 to the Qt build system.

        This fix is required for builds where HAVE(NULLPTR) is false
        (e.g. some MSVC and Symbian builds).

        * wtf/wtf.pri:

2011-01-02  Dan Bernstein  <mitz@apple.com>

        Rubber-stamped by Simon Fraser.

        <rdar://problem/8812159> Update copyright strings

        * Info.plist:

2011-01-02  Csaba Osztrogonác  <ossy@webkit.org>

        Fix GTK+ build after r74855.

        Reviewed by Xan Lopez.

        * GNUmakefile.am: Fix include pathes.

2011-01-02  Adam Barth  <abarth@webkit.org>

        One more .. missing in the Qt build.

        * jsc.pro:

2011-01-02  Xan Lopez  <xlopez@igalia.com>

        Fix GTK+ build.

        * GNUmakefile.am: add -I$(srcdir)/Source to the JSC cppflags so
        that anyone can include its headers without adding the prefix
        'Source/'.

2011-01-02  Carl Lobo  <carllobo@gmail.com>

        Reviewed by Adam Barth.

        Fix Windows Build for non-production where VSPropsRedirectionDir is not defined.
        https://bugs.webkit.org/show_bug.cgi?id=51797

        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.vcproj:
        * JavaScriptCore.vcproj/JavaScriptCore/build-generated-files.sh:
        * JavaScriptCore.vcproj/WTF/WTF.vcproj:
        * JavaScriptCore.vcproj/jsc/jsc.vcproj: